--- a/devOpsSetup/Dockerfile
+++ b/devOpsSetup/Dockerfile
@@ -10,17 +10,15 @@ ENV GITHUB_USERNAME=${GITHUB_USERNAME}
 ENV GITHUB_TOKEN=${GITHUB_TOKEN}
 
 # Update the package manager and install any packages you need
-RUN echo "My variable is: ${GITHUB_USERNAME}" && \
-    apt update && \
+RUN apt update && \
     apt install python3 -y && \
-    apt install pip -y && \
-    pip install flask && \
     apt-get install -y git && \
     cd /opt && \
     #clone the repo source code
-    git clone -b nishant https://${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/barualee/NexoSphere.git
-    #unzip the source code
-    # unzip main.zip
+    git clone -b nishant https://${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/barualee/NexoSphere.git && \
+    #run installs
+    apt install pip -y && \
+    pip install flask
 
 EXPOSE 5000
 EXPOSE 443
