--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Install Docker Compose
         run: |
-          sudo snap install docker-compose
-          
+          sudo snap install docker
+
       - name: Build the Docker image using Docker Compose
         run: |
           docker-compose build
