--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   terraform:
     runs-on: ubuntu-latest
-    needs: build  # This ensures that the terraform job runs after the build job
+    # needs: build  # This ensures that the terraform job runs after the build job
 
     steps:
     - name: Checkout repository
