consolidated into one app, frontend and backend

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,13 @@ jobs:
     steps:
       - name: Check out the repository
         uses: actions/checkout@v2
+      
+      - name: Load env file
+        env:
+          ENV_FILE: ${{ secrets.ENV_FILE }}
+        run: |
+          echo "$ENV_FILE" > .env
+          mv .env /nexosphere
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
