--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,39 @@
-flask
-yfinance
-pymongo
-redis
-APSchedulerpymongo
-python-dotenv
-polygon-api-client
+python-dotenv==1.0.1
+stockdex==1.0.1
+streamlit==1.40.1
+matplotlib==3.9.2
+APScheduler==3.10.4
+async-timeout==5.0.1
+beautifulsoup4==4.12.3
+blinker==1.9.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+dnspython==2.7.0
+Flask==3.0.3
+frozendict==2.4.6
+html5lib==1.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+lxml==5.3.0
+MarkupSafe==3.0.2
+multitasking==0.0.11
+numpy==2.1.2
+pandas==2.2.3
+peewee==3.17.8
+platformdirs==4.3.6
+pymongo==4.10.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+redis==5.2.0
+requests==2.32.3
+six==1.16.0
+soupsieve==2.6
+tzdata==2024.2
+tzlocal==5.2
+urllib3==2.2.3
+webencodings==0.5.1
+Werkzeug==3.0.6
+yfinance==0.2.49
