--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,6 +59,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Load env file
+      env:
+        ENV_FILE: ${{ secrets.ENV_FILE }}
+      run: |
+        echo "$ENV_FILE" > .env
+
     - name: Download Instance IP Artifact
       uses: actions/download-artifact@v4
       with:
@@ -95,4 +101,5 @@ jobs:
         EOF
 
         rm temp_key.pem  # Clean up the temporary file
+        rm .env #clean up the env file
 
