--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,24 @@
-COSMOS_URI="your_cosmos_db_uri"
-COSMOS_KEY="your_cosmos_db_key"
+FLASK_APP = "nexosphere"
+FLASK_ENV = "development_or_production"
+COSMOS_URI = "your_cosmos_db_uri"
+COSMOS_KEY = "your_cosmos_db_key"
+ENABLE_AGGREGATOR= "true_if_you_want_to_enable_aggregator"
+ENABLE_SENTIMENT = "true_if_you_want_to_enable_sentiment"
+
+# automate this so that it gets API access based on user sign up
+FINNHUB_API_KEY = "your_finnhub_api_key"
+ALPHA_VANTAGE_API_KEY = "your_alpha_vantage_api_key"
+
+
+COSMOS_CONNECTION_STRING = "your_cosmos_db_connection_string"
+DATABASE_NAME = "your_cosmos_db_name"
+REDIS_HOST = "your_redis_host"
+REDIS_PORT = "your_redis_port"
+REDIS_PWD = "your_redis_password"
+
+EODHD_API_URL="https://eodhd.com/api/news"
+EODHD_API_TOKEN="your_eodhd_api_token"
+T5_API_URL="https://tbele10d0b0x02lv.eastus.azure.endpoints.huggingface.cloud/"
+T5_API_AUTH="your_t5_api_auth"
+FINBERT_API_URL="https://machine-learning-worksapc-1119.eastus2.inference.ml.azure.com/score"
+FINBERT_API_AUTH="your_finbert_api_auth"
