integrate polygon api

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ ENABLE_SENTIMENT = "true_if_you_want_to_enable_sentiment"
 # automate this so that it gets API access based on user sign up
 FINNHUB_API_KEY = "your_finnhub_api_key"
 ALPHA_VANTAGE_API_KEY = "your_alpha_vantage_api_key"
+POLYGON_API_KEY = "your_polygon_api_key"
 
 
 COSMOS_CONNECTION_STRING = "your_cosmos_db_connection_string"
