--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click==8.1.7
 colorama==0.4.6
 dnspython==2.7.0
 Flask==3.0.3
+flask-restx==1.3.0
 frozendict==2.4.6
 html5lib==1.1
 idna==3.10
@@ -37,3 +38,4 @@ urllib3==2.2.3
 webencodings==0.5.1
 Werkzeug==3.0.6
 yfinance==0.2.49
+
